--- a/src/scss/components/_project-list.scss
+++ b/src/scss/components/_project-list.scss
@@ -1,6 +1,6 @@
 .project-list__items {
     display: grid;
-    gap: var(--flow-space);
+    gap: 1.5rem;
 }
 
 .project-list__item {
